Added content to sub .html pages

--- a/accomodations.html
+++ b/accomodations.html
@@ -5,11 +5,27 @@
 </head>
 
 <body>
-  <h1>
+  <h1>Accomodations
   </h1>
   <p>
+    Your relaxing vacation will include access to the following great ammenities:
   </p>
   <p>
+    <ul>
+      <li>Classy Dave's Award Wining Restaurant</li>
+      <li>Private White Sand Beach</li>
+      <li>Pool</li>
+      <li>Cabanas</li>
+      <li>Bottomless drinks</li>
+      <li>Mosquito nets</li>
+      <li>no internet access</li>
+      <li>And No Children!</li>
+    </ul>
+  </p>
+  <p>
+    Classy Dave's has won numerous awards on our island.<br>
+    Whether you want a lunch time hamburger or a fine dining experience, we have it all!<br>
+    <img src="img/restaurant.jpg" style="width: 400px">
   </p>
 </body>
 </html>
