added css file and made some changes

--- a/accomodations.html
+++ b/accomodations.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="css/style1.css" rel="stylesheet" type="text/css">
 <title>Welcome to My Private Island Resort</title>
 </head>
 
@@ -18,14 +19,14 @@
       <li>Cabanas</li>
       <li>Bottomless drinks</li>
       <li>Mosquito nets</li>
-      <li>no internet access</li>
+      <li>No internet access</li>
       <li>And No Children!</li>
     </ul>
   </p>
   <p>
     Classy Dave's has won numerous awards on our island.<br>
     Whether you want a lunch time hamburger or a fine dining experience, we have it all!<br>
-    <img src="img/restaurant.jpg" style="width: 400px">
+    <img src="img/restaurant.jpg" style="width: 600px">
   </p>
 </body>
 </html>
