--- a/travel_arrangements.html
+++ b/travel_arrangements.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="css/style1.css" rel="stylesheet" type="text/css">
 <title>Welcome to My Private Island Resort</title>
 </head>
 
@@ -15,8 +16,8 @@
     <br>A 45 minute boat ride.
   </p>
   <p>
-    Directions to port:
     <ol>
+      Directions to port:
       <li>from highway turn right</li>
       <li>go 3 miles turn left</li>
       <li>go straight</li>
