--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to My Private Island Resort</title>
+  <link href="css/styles1.css" rel="stylesheet" type="text/css">
+  <title>Welcome to My Private Island Resort</title>
 </head>
 
 <body>
   <h1>Do you want palm trees, white sand beaches, and a private villa?
   </h1>
-  <img src="img/island_resort.jpg" style="width: 1000px">
+  <img src="img/island_resort.jpg" style="width: 1300px">
   <p>Enjoy your intimate vacation getaway on an island unlike any other.<br>As featured in Top 10 Island Resorts magazine.
   </p>
   <p>Find all of our offerings below:
